# robot

./: CMakeLists.txt  LICENSE  README.md  install.sh  make.sh
include/: accelerometer.h  dhcp.h  dns.h  lwipopts.h  machine.h  motors.h  pid.h  service.h  sixaxis.h  spi.h
src/: accelerometer.c  dhcp.c  machine.c  main.c  motors.c  pid.c  service.c  sixaxis.c  spi.c
